--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h1>Обо мне</h1>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Привет! Меня зовут Алексей, и я веб-разработчик с более чем 5-летним опытом. Я специализируюсь на создании современных, функциональных и красивых веб-сайтов и приложений.</p>
+                        <p>Привет! Меня зовут Роман, и я веб-разработчик с более чем 6-летним опытом. Я специализируюсь на создании современных, функциональных и красивых веб-сайтов и приложений.</p>
                         <p>Моя страсть к программированию началась еще в университете, и с тех пор я постоянно совершенствую свои навыки, изучая новые технологии и подходы к разработке.</p>
                         <p>Я верю, что хороший сайт должен быть не только красивым, но и удобным для пользователя, поэтому я уделяю особое внимание UX/UI дизайну и производительности.</p>
                         
@@ -190,28 +190,28 @@
                             <div class="contact-icon">📧</div>
                             <div>
                                 <h3>Email</h3>
-                                <p>example@mail.com</p>
+                                <p>biba.boba@mail.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon">📞</div>
                             <div>
                                 <h3>Телефон</h3>
-                                <p>+7 (999) 123-45-67</p>
+                                <p>+7 (880) 555-35-35</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon">📍</div>
                             <div>
                                 <h3>Адрес</h3>
-                                <p>г. Москва, ул. Примерная, д. 123</p>
+                                <p>г. Сергиев Посад, Московское ш., 22А</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon">🕒</div>
                             <div>
                                 <h3>Время работы</h3>
-                                <p>Пн-Пт: 9:00 - 18:00</p>
+                                <p>Пн-Пт: 9:00 - 17:00</p>
                             </div>
                         </div>
                     </div>
